@@ -34,7 +34,7 @@ public:
     virtual void SetTipKind(wxTipKind tipKind) = 0;
     virtual void SetTitleFont(const wxFont& font) = 0;
 
-    virtual void ShowFor(wxWindow* win) = 0;
+    virtual void ShowFor(wxWindow* win, wxRect* rect = NULL) = 0;
 
     virtual ~wxRichToolTipImpl() { }
 
